--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "stompit": "^0.26.0",
     "uuid": "^3.3.3"
+  },
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "<rootDir>/build/"
+    ]
   }
 }
