--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --setupFiles dotenv/config",
     "build": "babel src -d build",
     "start": "node build/server.js",
-    "start-local": "babel-node src/server.js"
+    "start-local": "babel-node -r node_modules/dotenv/config src/server.js"
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,12 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-http-context": "^1.2.3",
+    "express-winston": "^4.0.1",
     "moment": "^2.24.0",
     "stompit": "^0.26.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "winston": "^3.2.1"
   },
   "jest": {
     "modulePathIgnorePatterns": [
