--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "jest --setupFiles dotenv/config",
-    "build": "babel src -d build",
+    "build": "babel src -d build --ignore '**/*.test.js'",
     "start": "node build/server.js",
     "start-local": "babel-node -r node_modules/dotenv/config src/server.js"
   },
@@ -30,10 +30,5 @@
     "stompit": "^0.26.0",
     "uuid": "^3.3.3",
     "winston": "^3.2.1"
-  },
-  "jest": {
-    "modulePathIgnorePatterns": [
-      "<rootDir>/build/"
-    ]
   }
 }
