--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "lint": "eslint src/",
+    "lint": "eslint src/ --fix",
     "unit": "jest --setupFiles dotenv/config",
     "test": "npm run lint && npm run unit",
     "build": "babel src -d build --ignore '**/*.test.js'",
