--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src/ --fix",
     "unit": "jest --setupFiles dotenv/config",
     "test": "npm run lint && npm run unit",
-    "build": "babel src -d build --ignore '**/*.test.js'",
+    "build": "babel src -d build --ignore '**/*.test.js' && cp src/*.json build",
     "start": "node build/server.js",
     "start-local": "babel-node -r node_modules/dotenv/config src/server.js"
   },
@@ -35,6 +35,7 @@
     "express-winston": "^4.0.1",
     "moment": "^2.24.0",
     "stompit": "^0.26.0",
+    "swagger-ui-express": "^4.1.2",
     "uuid": "^3.3.3",
     "winston": "^3.2.1"
   }
