[PRMT-698] update fake MHS to use username and password

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
 PDS_ASID=
 DEDUCTIONS_ASID=
 MHS_QUEUE_NAME=
-MHS_QUEUE_URL=
+MHS_QUEUE_URL_1=
+MHS_QUEUE_URL_2=
+MHS_QUEUE_USERNAME=
+MHS_QUEUE_PASSWORD=
 AUTHORIZATION_KEYS=
