--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "lint": "eslint src/ --fix",
-    "unit": "jest --setupFiles dotenv/config",
+    "unit": "jest",
     "test": "npm run lint && npm run unit",
     "build": "babel src -d build --ignore '**/*.test.js' && cp src/*.json build",
     "start": "node build/server.js",
@@ -36,6 +36,7 @@
     "moment": "^2.24.0",
     "stompit": "^0.26.0",
     "swagger-ui-express": "^4.1.2",
+    "traverse": "^0.6.6",
     "uuid": "^3.3.3",
     "winston": "^3.2.1"
   }
