[PRMT-698] send message to real mhs if not running locally

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,5 @@
 PDS_ASID=
 DEDUCTIONS_ASID=
-MHS_QUEUE_NAME=
-MHS_QUEUE_URL_1=
-MHS_QUEUE_URL_2=
-MHS_QUEUE_USERNAME=
-MHS_QUEUE_PASSWORD=
 AUTHORIZATION_KEYS=
+MHS_URL=
+NODE_ENV=
