--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-http-context": "^1.2.3",
     "express-winston": "^4.0.1",
     "moment": "^2.24.0",
-    "stompit": "^0.26.0",
     "swagger-ui-express": "^4.1.2",
     "traverse": "^0.6.6",
     "uuid": "^3.3.3",
