--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "express-http-context": "^1.2.3",
     "express-winston": "^4.0.1",
+    "lodash.clonedeep": "^4.5.0",
     "moment": "^2.24.0",
     "swagger-ui-express": "^4.1.2",
     "traverse": "^0.6.6",
