[PRMT-700] Wait for service to be healthy after deployment
- by using tini - made the image handle signals to allow ECS stop old
containers faster
 - added a wait step after deployment

--- a/gocd/pipeline.gocd.yml
+++ b/gocd/pipeline.gocd.yml
@@ -79,3 +79,8 @@ pipelines:
                     arguments:
                       - -c
                       - ./tasks tf_apply
+                - exec:
+                    command: /bin/bash
+                    arguments:
+                      - -c
+                      - ./tasks wait_ecs
