[PRMT-700] Run smoke test in GoCD VPC
The IPs of agents should be whitelisted

--- a/gocd/pipeline.gocd.yml
+++ b/gocd/pipeline.gocd.yml
@@ -101,8 +101,7 @@ pipelines:
           jobs:
             smoke:
               resources:
-                - deductions-private # run in deductions private network
-                - dev # dev environment
+                - docker
               tasks:
                 - exec:
                     command: /bin/bash
