--- a/gocd/pipeline.gocd.yml
+++ b/gocd/pipeline.gocd.yml
@@ -88,7 +88,8 @@ pipelines:
           jobs:
             test:
               resources:
-                - mhs-opentest
+                - dev
+                - mhs
               tasks:
                 - exec:
                     command: /bin/bash
