Fix getting right outbound url for MHS
Reading from SSM each time should prevent test failures when we update
DNS again

--- a/gocd/pipeline.gocd.yml
+++ b/gocd/pipeline.gocd.yml
@@ -90,6 +90,8 @@ pipelines:
               resources:
                 - dev
                 - mhs
+              environment_variables:
+                NHS_ENVIRONMENT: dev
               tasks:
                 - exec:
                     command: /bin/bash
